@@ -3,7 +3,7 @@
         'name' => 'drupal/legacy-project',
         'pretty_version' => 'dev-master',
         'version' => 'dev-master',
-        'reference' => 'dde532aef6c1c7d3dd8cc3fdd69ada2535705cb9',
+        'reference' => '05a60e88786aefb97f9e1c6c38e22b8ba2091b9a',
         'type' => 'project',
         'install_path' => __DIR__ . '/../../',
         'aliases' => array(),
@@ -619,7 +619,7 @@
         'drupal/legacy-project' => array(
             'pretty_version' => 'dev-master',
             'version' => 'dev-master',
-            'reference' => 'dde532aef6c1c7d3dd8cc3fdd69ada2535705cb9',
+            'reference' => '05a60e88786aefb97f9e1c6c38e22b8ba2091b9a',
             'type' => 'project',
             'install_path' => __DIR__ . '/../../',
             'aliases' => array(),
@@ -716,9 +716,9 @@
             'dev_requirement' => false,
         ),
         'drupal/slick_views' => array(
-            'pretty_version' => '2.6.0',
-            'version' => '2.6.0.0',
-            'reference' => '8.x-2.6',
+            'pretty_version' => '2.7.0',
+            'version' => '2.7.0.0',
+            'reference' => '8.x-2.7',
             'type' => 'drupal-module',
             'install_path' => __DIR__ . '/../../modules/contrib/slick_views',
             'aliases' => array(),
